@@ -1,3 +1,5 @@
+23 Sep 2006 RO/RW/RING/NORING tape config options (replaces previous
+            RO/NORING) - Kevin Leonard by Jay Maynard
 22 Sep 2006 Fix possible loop in SERVC WRITE_EVENT_DATA - Jan Jaeger
 22 Sep 2006 PR# misc/30: HAO (Hercules Automatic Operator) - Bernard
             van der Helm by Fish
